[package]
name = "fuzzers"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
tui = []
std = []
serdeany_autoreg = ["libafl_bolts/serdeany_autoreg"]

[dependencies]
libafl = { version = "0.13.2", features = ["default", "cmin", "serdeany_autoreg"]}
libafl_bolts  = { version = "0.13.2"}
libafl_targets  = { version = "0.13.2"}
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.13"
serde = "1.0.130"
log = "0.4"
rand="0.8.5"
env_logger = "0.9"
psutil = "3.0"
libc = "0.2"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "byte_level"
path = "src/byte_level.rs"

[[bin]]
name = "basic_sync"
path = "src/basic_sync.rs"

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[[bin]]
name = "parallel_sync"
path = "src/parallel_sync.rs"

[[bin]]
name = "parallel_sync_cmplog"
path = "src/parallel_sync_cmplog.rs"

[[bin]]
name = "advanced"
path = "src/advanced.rs"

[[bin]]
name = "advanced_sync"
path = "src/advanced_sync.rs"

[[bin]]
name = "advanced_cmplog"
path = "src/advanced_cmplog.rs"

[[bin]]
name = "compile"
path = "compile.rs"

[[bin]]
name = "run"
path = "run.rs"